# geospatial-classification

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  docker-test.sh  pyproject.toml  requirements.txt  run-docker.sh
api/app/: main.py
api/app/api/: __init__.py  predict.py
api/app/schemas/: __init__.py  prediction.py
api/app/services/: __init__.py  model.py  satellite.py
configs/: evaluate.yaml  train_cnn.yaml  train_hybrid.yaml
scripts/: setup_data.py
src/geospatial_classification/: __init__.py  config.py
src/geospatial_classification/data/: __init__.py  download.py  setup.py  transforms.py
src/geospatial_classification/evaluation/: __init__.py  metrics.py  plots.py
src/geospatial_classification/models/: __init__.py  cnn.py  vit.py
src/geospatial_classification/scripts/: evaluate_models.py  train_cnn.py  train_hybrid.py
src/geospatial_classification/training/: __init__.py  loops.py  utils.py
src/geospatial_classification/utils/: __init__.py  logging_config.py  viz.py
tests/: test_data.py  test_evaluation.py  test_models.py  test_training.py
